infrastructure/istio/gateway.yaml
# infrastructure/istio/gateway.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: mlops-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
# VirtualService pentru MLflow
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: mlflow-virtualservice
  namespace: mlflow
spec:
  hosts:
  - "*"
  gateways:
  - istio-system/mlops-gateway
  http:
  - match:
    - uri:
        prefix: /mlflow
    rewrite:
      uri: /mlflow
    route:
    - destination:
        host: mlflow-service.mlflow.svc.cluster.local
        port:
          number: 5000
---
# VirtualService pentru MinIO Console
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: minio-console-virtualservice
  namespace: mlflow
spec:
  hosts:
  - "*"
  gateways:
  - istio-system/mlops-gateway
  http:
  - match:
    - uri:
        prefix: /minio
    rewrite:
      uri: /
    route:
    - destination:
        host: minio.mlflow.svc.cluster.local
        port:
          number: 9001
